--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-#deploy:
-#  provider: azure_web_apps
-#  verbose: true
-#  skip_cleanup: true
+deploy:
+  provider: azure_web_apps
+  verbose: true
+  skip_cleanup: true
